[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9823, 32.1245 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.01563, 28.3713 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.5186, 0.873367 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="Right" type="Area2D" parent="."]
position = Vector2( 34, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -34, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 2 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 0, -34 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 3 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 34 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Right_body_exited"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_exited" from="Top" to="." method="_on_Top_body_exited"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_exited" from="Bottom" to="." method="_on_Bottom_body_exited"]
